tests/NormalTests/paczka1/fuzzy1/16081611.err
Error in line 1: st9Rc S465 46,0
Error in line 9: jX0 A282 18,67
Error in line 18: BOh0azyCZ A569 43,5
Error in line 10: jX0 A282 57,2
Error in line 32: BOh0azyCZ A282 36,0
Error in line 37: bHLWFE A569 92,2
